The native client keeps its argv: runtime option parsing is off in the image, so -Dkey=value and -XX: tokens reach jk mvn, jk run and every child instead of being swallowed by the launcher